Change the size of the window