@@ -2,8 +2,6 @@ package duke;
 
 import javafx.application.Application;
 
-// --module-path C:\JavaFx\javafx-sdk-11\bin --add-modules javafx.controls,javafx.fxml
-
 /**
  * A launcher class to workaround classpath issues.
  */
